--- a/Functions List Comprehension Lambda.ipynb
+++ b/Functions List Comprehension Lambda.ipynb
@@ -704,6 +704,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Using Args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emil Refsnes\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function(fname, lname):\n",
+    "  print(fname + \" \" + lname)\n",
+    "\n",
+    "my_function(\"Emil\", \"Refsnes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "my_function() missing 1 required positional argument: 'lname'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [247]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmy_function\u001b[39m(fname, lname):\n\u001b[1;32m      4\u001b[0m   \u001b[38;5;28mprint\u001b[39m(fname \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m lname)\n\u001b[0;32m----> 6\u001b[0m \u001b[43mmy_function\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEmily\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: my_function() missing 1 required positional argument: 'lname'"
+     ]
+    }
+   ],
+   "source": [
+    "#This function expects 2 arguments, but gets only 1:\n",
+    "\n",
+    "def my_function(fname, lname):\n",
+    "  print(fname + \" \" + lname)\n",
+    "\n",
+    "my_function(\"Emily\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Any argument before the / , are positional-only, and any argument after the *, are keyword-only.\n",
+    "\n",
+    "Example\n",
+    "def my_function(a, b, /, *, c, d):\n",
+    "  print(a + b + c + d)\n",
+    "\n",
+    "my_function(5, 6, c = 7, d = 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## 2. List Comprehension (10 Problems)\n",
     "\n",
@@ -989,10 +1069,324 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#27)Add 5 to a number.\n",
+    "\n",
+    "f1=lambda x :x+5\n",
+    "f1(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#28)Multiply two numbers.\n",
+    "f1=lambda x,y :x*y\n",
+    "f1(5,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#29) Get the length of a string.\n",
+    "f2=lambda x:len(x)\n",
+    "f2(\"apoorva\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36]"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#30)Use map() + lambda to get squares of all list elements.\n",
+    "\n",
+    "n=[1,2,3,4,5,6]\n",
+    "f3=list(map(lambda x : x*x , n))\n",
+    "f3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple', 'avocado', 'almond']"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#31)Use filter() + lambda to keep strings starting with 'a'.\n",
+    "\n",
+    "n=['apple','mango','avocado','almond','fig']\n",
+    "f5= list(filter(lambda x: x.startswith('a'),n))\n",
+    "f5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(5, 0), (4, 1), (2, 2), (1, 3)]"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#32)Sort a list of tuples by second element using lambda.\n",
+    "\n",
+    "data = [(1, 3), (4, 1), (2, 2), (5, 0)]\n",
+    "\n",
+    "f6=sorted(data, key=lambda x : x[1])\n",
+    "f6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#33)Use reduce() + lambda to calculate the product of a list.\n",
+    "from functools import reduce\n",
+    "n=[1,2,3,4,5]\n",
+    "product=reduce(lambda x,y : x*y, n)\n",
+    "product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fig', 'apple', 'orange', 'pineapple']"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#34)Use lambda inside sorted() to sort strings by length.\n",
+    "n=[\"apple\",\"fig\", \"pineapple\",\"orange\"]\n",
+    "lst=sorted(n, key=len)\n",
+    "\n",
+    "#or\n",
+    "\n",
+    "lst = sorted(n, key=lambda x: len(x))\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sorted(iterable, key=key, reverse=reverse)#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pineapple', 'orange', 'apple', 'fig']"
+      ]
+     },
+     "execution_count": 258,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst=sorted(n, key=lambda x:x, reverse=True)\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3: 'a', 7: 'c', 8: 'd', 1: 'b'}"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#35)Sort list of dictionaries by a key using lambda.\n",
+    "\n",
+    "dic={3:'a',7:'c',8:'d',1:'b'}\n",
+    "dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1, 7, 8]"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst=sorted(dic, key=lambda x: dic.get(x,0))\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Bob', 'age': 20},\n",
+       " {'name': 'Alice', 'age': 25},\n",
+       " {'name': 'Charlie', 'age': 30}]"
+      ]
+     },
+     "execution_count": 302,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [{\"name\": \"Alice\", \"age\": 25},{\"name\": \"Bob\", \"age\": 20},{\"name\": \"Charlie\", \"age\": 30},]\n",
+    "\n",
+    "# Sorting by the 'age' key\n",
+    "sorted_data = sorted(data, key=lambda x: x['age'])\n",
+    "sorted_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[16, 36, 64, 100, 144]"
+      ]
+     },
+     "execution_count": 303,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#36)Chain map(), filter(), lambda to get even squares above 10.\n",
+    "\n",
+    "\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+    "\n",
+    "# Chain map(), filter(), and lambda to get even squares above 10\n",
+    "result = list(filter(lambda x: x > 10, map(lambda x: x**2, filter(lambda x: x % 2 == 0, numbers))))\n",
+    "\n",
+    "result\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1006,21 +1400,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from string import ascii_lowercase"
+   ]
   },
   {
    "cell_type": "code",
