--- a/Closure and Practice Problems.ipynb
+++ b/Closure and Practice Problems.ipynb
@@ -615,38 +615,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Question 9: Implement a function that checks if a given string has balanced parentheses. The function should return `True` if the parentheses are balanced, and `False` otherwise. For example, \"([]){}\" is balanced, but \"([)]\" is not.\n",
+    "\n",
     "Input: ‘{a + (b - c)] * (x / y)}’\n",
+    "\n",
     "Expected Output: False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def balanced_parentheses(s):\n",
+    "    stack = []\n",
+    "    open_brackets = \"([{\"\n",
+    "    close_brackets = \")]}\"\n",
+    "    bracket_pairs = {\")\": \"(\", \"}\": \"{\", \"]\": \"[\"}\n",
+    "    \n",
+    "    for char in s:\n",
+    "        if char in open_brackets:\n",
+    "            stack.append(char)\n",
+    "        elif char in close_brackets:\n",
+    "            if not stack or stack.pop() != bracket_pairs[char]:\n",
+    "                return False\n",
+    "balanced_parentheses('{a + (b - c)] * (x / y)}')"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Question 10: Write a Python program to implement a basic calculator that can perform addition, subtraction, multiplication, and division. The program should take input in the form of a string, e.g., \"2 + 3\", and return the result of the operation.\n",
+    "\n",
     "Input: '3+2*5'\n",
+    "\n",
     "Output: 13\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +680,7 @@
        "13"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
