--- a/Closure and Practice Problems.ipynb
+++ b/Closure and Practice Problems.ipynb
@@ -524,53 +524,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "10\n"
+      "10\n",
+      "13\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 179,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "def non_adjacent(nums):\n",
-    "    max_sum=current_sum=nums[0]\n",
-    "    for num in range(1,len(nums),2):\n",
-    "        current_sum=max(nums[num],current_sum+nums[num])\n",
-    "        print(current_sum)\n",
-    "        max_sum=max(max_sum, current_sum)\n",
-    "    return max_sum\n",
-    "non_adjacent([1, 0, 4, 9, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def non_adjacent(nums):\n",
-    "    max_sum=current_sum=nums[0]\n",
-    "    for num in range(0,len(nums),2):\n",
-    "        current_sum=max(nums[num],current_sum+nums[num])\n",
-    "        print(current_sum)\n",
-    "        max_sum=max(max_sum, current_sum)\n",
-    "    return max_sum\n",
-    "non_adjacent([1, 3, 4, 9, 8])"
+    "    if not nums:\n",
+    "        return 0\n",
+    "    if len(nums)==1:\n",
+    "        return nums[0]\n",
+    "    prev1=nums[0]\n",
+    "    prev2=0\n",
+    "    \n",
+    "    for num in range(1, len(nums)):\n",
+    "        current=max(prev1,prev2+nums[num])\n",
+    "        prev2=prev1\n",
+    "        prev1=current\n",
+    "    return prev1\n",
+    "        \n",
+    "    \n",
+    "print(non_adjacent([1,0,4,9,1]))\n",
+    "print(non_adjacent([1, 3, 4, 9, 8]))"
    ]
   },
   {
@@ -627,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +619,7 @@
        "False"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
