--- a/Pattern.ipynb
+++ b/Pattern.ipynb
@@ -46,36 +46,263 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for i in range(0,5):\n",
+        "  for j in range(0,i+1):\n",
+        "    print(\"*\", end=' ')\n",
+        "  print()"
+      ],
       "metadata": {
-        "id": "HqzAXoZnvtuY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HqzAXoZnvtuY",
+        "outputId": "c0b57c86-f22f-4d66-9a7c-44e2ae123f9b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n",
+            "* * * * * \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "for i in range(6,1,-1):\n",
+        "  for j in range(i-1):\n",
+        "    print(\"*\", end= ' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tRKqsL6F3meC",
+        "outputId": "46bd3ee5-2a27-43ed-cf76-1a013994ba72"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* * * * * \n",
+            "* * * * \n",
+            "* * * \n",
+            "* * \n",
+            "* \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,6):\n",
+        "  for j in range(1,i+1):\n",
+        "    print(j, end = ' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9mdh9c2gvtxd",
+        "outputId": "2122aebf-5cbe-4a69-db40-d1bbf002b5ae"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 \n",
+            "1 2 \n",
+            "1 2 3 \n",
+            "1 2 3 4 \n",
+            "1 2 3 4 5 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,6):\n",
+        "  for j in range(1, i+1):\n",
+        "    print(i, end=' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3mnbpVZzvt0U",
+        "outputId": "de4a8461-88d6-4800-c030-62aed05df641"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 \n",
+            "2 2 \n",
+            "3 3 3 \n",
+            "4 4 4 4 \n",
+            "5 5 5 5 5 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(0,6):\n",
+        "  for j in range(0,i+1):\n",
+        "    print(\"*\", end=' ')\n",
+        "  print()\n",
+        "\n",
+        "for i in range(6,1,-1):\n",
+        "  for j in range(i-1):\n",
+        "    print(\"*\", end= ' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Pjwp7mb_zBnL",
+        "outputId": "5acc449c-e100-44b1-8063-251b81e1c998"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n",
+            "* * * * * \n",
+            "* * * * * * \n",
+            "* * * * * \n",
+            "* * * * \n",
+            "* * * \n",
+            "* * \n",
+            "* \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(7,0,-1):\n",
+        "  for j in range(1,i-1):\n",
+        "    print(j, end=' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HG0XZZCCvt3g",
+        "outputId": "b37f9112-260e-4fe6-f534-ac5866599d2c"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 5 \n",
+            "1 2 3 4 \n",
+            "1 2 3 \n",
+            "1 2 \n",
+            "1 \n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(0,5):\n",
+        "  for j in range(5,i,-1):\n",
+        "    print(' ',end=' ')\n",
+        "  for k in range(2*i+1):\n",
+        "    print(\"*\", end=' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FaiOAGLP0-b2",
+        "outputId": "8749efa0-0ecd-47d0-eca3-0c1a6854241d"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "          * \n",
+            "        * * * \n",
+            "      * * * * * \n",
+            "    * * * * * * * \n",
+            "  * * * * * * * * * \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "9mdh9c2gvtxd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ww01rA6I0-gI",
+        "outputId": "451170b3-ab23-4813-f458-705f06c65165"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n",
+            "* * * * * \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for i in range(0,5):\n",
+        "  for j in range(0, )"
+      ],
       "metadata": {
-        "id": "3mnbpVZzvt0U"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "HG0XZZCCvt3g"
+        "id": "cB1f-ExfnxG6"
       },
       "execution_count": null,
       "outputs": []
