--- a/Pattern.ipynb
+++ b/Pattern.ipynb
@@ -382,7 +382,7 @@
         "id": "UalSa4DGcKT9",
         "outputId": "f4e24f9e-58b4-4159-fa66-f9f30c714995"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
         },
         "outputId": "bce273ec-1119-4f01-f75e-4acf7528bd75"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +456,7 @@
         },
         "outputId": "77c61cbe-94ee-4495-d769-2e83420f16e7"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +490,7 @@
         "id": "X5-sQJywMjfd",
         "outputId": "09bd9788-d3fa-429b-f8f8-d77cc8beec94"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,12 +512,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
         "id": "dN4PZqStMji0",
         "outputId": "766344ec-6e97-47d7-a447-646bfc808273"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +552,7 @@
         "outputId": "fdb74240-eaee-450b-9abd-2b17bf10a509",
         "id": "FXihscwrOCRj"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,7 +586,7 @@
         "outputId": "9a31ba52-afec-4bc7-c442-af150ee5410d",
         "id": "0dIwm9-iORxw"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,20 +605,22 @@
     {
       "cell_type": "code",
       "source": [
-        "#Pattern 17\n",
+        "#Pattern Bonus\n",
         "\n",
         "n=int(input(\"Enter the number of row: \"))\n",
         "for i in range(1,n+1):\n",
-        "  for j in range(0,i):\n",
-        "    print(chr(65+j), end=' ')\n",
+        "  for j in range(n,i,-1):\n",
+        "    print(\" \", end=' ')\n",
+        "  for k in range(2*i-1):\n",
+        "    print(chr(64+i), end=' ')\n",
         "  print()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "09bd9788-d3fa-429b-f8f8-d77cc8beec94",
-        "id": "nTrrAS_uOQuB"
+        "id": "O0cT4WJJMjpD",
+        "outputId": "e67b97e8-8a28-48f1-b3df-f04cf9618a54"
       },
       "execution_count": null,
       "outputs": [
@@ -627,11 +629,11 @@
           "name": "stdout",
           "text": [
             "Enter the number of row: 5\n",
-            "A \n",
-            "A B \n",
-            "A B C \n",
-            "A B C D \n",
-            "A B C D E \n"
+            "        A \n",
+            "      B B B \n",
+            "    C C C C C \n",
+            "  D D D D D D D \n",
+            "E E E E E E E E E \n"
           ]
         }
       ]
@@ -644,29 +646,207 @@
         "n=int(input(\"Enter the number of row: \"))\n",
         "for i in range(1,n+1):\n",
         "  for j in range(n,i,-1):\n",
-        "    print(\" \", end=' ')\n",
-        "  for k in range(2*i-1):\n",
-        "    print(chr(65+i), end=' ')\n",
+        "    print(\" \", end='')\n",
+        "  for k in range(1,i+1):\n",
+        "    print(chr(64+k), end='')\n",
+        "  for k in range(i-1,0,-1):\n",
+        "    print(chr(64+k), end='')\n",
         "  print()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "O0cT4WJJMjpD",
-        "outputId": "a571c364-0670-4f33-b1d0-1a1af685d2fc"
+        "id": "oAtbWMGoMjsL",
+        "outputId": "52961b0e-15e5-4012-879d-3fa6cbd5c99c"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the number of row: 4\n",
-            "      B \n",
-            "    C C C \n",
-            "  D D D D D \n",
-            "E E E E E E E \n"
+            "Enter the number of row: 5\n",
+            "    A\n",
+            "   ABA\n",
+            "  ABCBA\n",
+            " ABCDCBA\n",
+            "ABCDEDCBA\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Pattern 18\n",
+        "\n",
+        "n=int(input(\"Enter the number of row: \"))\n",
+        "for i in range(0,n):\n",
+        "  for j in range(i+1,0,-1):\n",
+        "    print(chr(70-j),end=' ')\n",
+        "  print()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Na1hTXsebvXH",
+        "outputId": "7b4aced8-ad26-492d-dfac-6230cd37a5be"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of row: 5\n",
+            "E \n",
+            "D E \n",
+            "C D E \n",
+            "B C D E \n",
+            "A B C D E \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Pattern 19\n",
+        "\n",
+        "n=int(input(\"Enter the number of row: \"))\n",
+        "\n",
+        "for i in range(1,n+1):\n",
+        "  for j in range(n-i+1):\n",
+        "    print(\"*\", end='')\n",
+        "  for k in range(2*i-2):\n",
+        "    print(\" \", end='')\n",
+        "  for l in range(n-i+1):\n",
+        "    print(\"*\", end='')\n",
+        "  print()\n",
+        "\n",
+        "for i in range(n,0,-1):\n",
+        "  for j in range(n-i+1):\n",
+        "    print(\"*\", end='')\n",
+        "  for k in range(2*i-2):\n",
+        "    print(\" \", end='')\n",
+        "  for l in range(n-i+1):\n",
+        "    print(\"*\", end='')\n",
+        "  print()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7vliM97kbvaF",
+        "outputId": "18fd7f72-f615-416f-f61d-bb8766d407e4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of row: 5\n",
+            "**********\n",
+            "****  ****\n",
+            "***    ***\n",
+            "**      **\n",
+            "*        *\n",
+            "*        *\n",
+            "**      **\n",
+            "***    ***\n",
+            "****  ****\n",
+            "**********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Pattern 20\n",
+        "\n",
+        "n=int(input(\"Enter the number of row: \"))\n",
+        "for i in range(n,0,-1):\n",
+        "  for j in range(n-i+1):\n",
+        "    print(\"*\", end='')\n",
+        "  for k in range(2*i-2):\n",
+        "    print(\" \", end='')\n",
+        "  for l in range(n-i+1):\n",
+        "    print(\"*\", end='')\n",
+        "  print()\n",
+        "for i in range(2,n+1):\n",
+        "  for j in range(n-i+1):\n",
+        "    print(\"*\", end='')\n",
+        "  for k in range(2*i-2):\n",
+        "    print(\" \", end='')\n",
+        "  for l in range(n-i+1):\n",
+        "    print(\"*\", end='')\n",
+        "  print()\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dbbYYVFSbvc9",
+        "outputId": "56d7f53b-28dc-4281-8c8b-fe48d0207636"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of row: 5\n",
+            "*        *\n",
+            "**      **\n",
+            "***    ***\n",
+            "****  ****\n",
+            "**********\n",
+            "****  ****\n",
+            "***    ***\n",
+            "**      **\n",
+            "*        *\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Pattern 21\n",
+        "\n",
+        "n=int(input(\"Enter the number of rows: \"))\n",
+        "for i in range(0,n):\n",
+        "  for j in range(0,n):\n",
+        "    if(i==0 or j==0 or i==n-1 or j==n-1):\n",
+        "      print(\"*\", end='')\n",
+        "    else:\n",
+        "      print(\" \", end='')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xEuRHWJ-bvgl",
+        "outputId": "144b2429-80f8-401c-a4c7-a4c270a9c441"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of rows: 5\n",
+            "*****\n",
+            "*   *\n",
+            "*   *\n",
+            "*   *\n",
+            "*****\n"
           ]
         }
       ]
@@ -675,7 +855,34 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "oAtbWMGoMjsL"
+        "id": "N5NjrCWBy-b_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8N72ClC-y-kK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TYyg8eWWy-nW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wcWxqdb1y-qQ"
       },
       "execution_count": null,
       "outputs": []
